# quilkin

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  about.toml  build.rs  deny.toml  justfile  mise.toml  rust-toolchain.toml
.cargo/: config.toml
.ci/: install-virtme-ng.sh
.ci/xdp/: integ-test-multi-kernel.sh  veth-integ-test.sh
.config/: nextest.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  image.yml  release-plz.yaml  xdp-integration-test.yml
benches/: misc.rs  provider.rs  shared.rs
crates/agones/: Cargo.toml
crates/agones/src/: lib.rs  provider.rs  relay.rs  sidecar.rs
crates/corrosion/: Cargo.toml
crates/corrosion-tests/: Cargo.toml
crates/corrosion-tests/src/: lib.rs
crates/corrosion-tests/tests/: db.rs  handshake.rs  quic.rs  subscription.rs
crates/corrosion-tests/tests/snapshots/: quic__disconnect.snap  quic__initial_insert.snap  quic__remove_and_update.snap
crates/corrosion/src/: codec.rs  db.rs  lib.rs  persistent.rs  pubsub.rs  setup.rs
crates/corrosion/src/db/: read.rs  write.rs
crates/corrosion/src/persistent/: client.rs  error.rs  executor.rs  mutator.rs  proto.rs  server.rs
crates/ebpf/: Cargo.toml
crates/macros/: Cargo.toml  README.md
crates/proto-gen/: gen.rs
crates/quilkin-proto/: Cargo.toml
crates/system/: Cargo.toml
crates/system/src/: lib.rs
crates/system/src/net/: mod.rs  tcp.rs
crates/system/src/net/http/: metrics.rs  mod.rs
crates/test/: Cargo.toml
crates/test/src/: lib.rs
crates/test/tests/: proxy.rs  token_router.rs  uring.rs
crates/types/: Cargo.toml
crates/types/src/: endpoint.rs  icao.rs  tokens.rs
crates/xdp/: Cargo.toml
crates/xds/: Cargo.toml
crates/xds/src/: client.rs  config.rs  lib.rs  locality.rs  metrics.rs  server.rs
docs/: book.toml  mise.toml
docs/src/: SUMMARY.md  faq.md  installation.md  introduction.md
docs/src/deployment/: configuration.md  examples.md
docs/src/filters/: capture.md  concatenate.md  debug.md  decryptor.md  firewall.md  load_balancer.md  local_rate_limit.md  match.md  timestamp.md  token_router.md
docs/src/providers/: agones.md  http.md
docs/src/services/: udp.md  xds.md
examples/: compose.yaml
examples/agones-xonotic-relay/: proxy-pool.yaml  relay-control-plane.yaml
examples/agones-xonotic-sidecar/: sidecar.yaml
examples/agones-xonotic-xds/: proxy-pool.yaml  xds-control-plane.yaml
examples/iperf3/: Dockerfile
image/: Dockerfile  Dockerfile.ghaction
main/api/: crates.js  help.html  search-index.js  settings.html  src-files.js
main/api/agones/: all.html  constant.GAMESERVER_IMAGE.html  constant.IMAGE_TAG.html  constant.PREV_IMAGE_TAG.html  constant.TOKEN_KEY.html  fn.create_agones_rbac_read_account.html  fn.create_token_router_config.html  fn.create_tokenised_gameserver.html  fn.debug_pods.html  fn.fleet.html  fn.game_server.html  fn.gameserver_address.html  fn.is_deployment_ready.html  fn.is_fleet_ready.html  fn.is_gameserver_ready.html  fn.is_pod_ready.html  fn.quilkin_config_map.html  fn.quilkin_container.html  fn.quilkin_proxy_deployment.html  index.html  static.CLIENT.html  struct.Client.html
main/api/corrosion/: all.html  index.html  sidebar-items.js  struct.Path.html  struct.PathBuf.html  struct.SmallVec.html  struct.Tripwire.html  type.Peer.html
main/api/corrosion_tests/: all.html  fn.assert_sub_event_eq.html  fn.exec.html  fn.exec_interr.html  fn.new_split_pool.html  fn.query_to_string.html  fn.setup.html  index.html  sidebar-items.js  struct.Cell.html  struct.TestSubsDb.html  struct.Trip.html
main/api/corrosion_utils/: all.html  fn.exec.html  fn.new_split_pool.html  fn.query_to_string.html  fn.setup.html  index.html  struct.Cell.html  struct.TestSubsDb.html  struct.Trip.html
main/api/qt/: all.html  constant.MAX_WAIT.html  enum.Pail.html  enum.PailConfig.html  fn.alloc_buffer.html  fn.init_logging.html  index.html  macro.filter_chain.html  macro.func_name.html  macro.json.html  macro.sandbox_config.html  macro.temp_file.html  macro.trace_test.html  sidebar-items.js  static.BUFFER_POOL.html  struct.AdminPailConfig.html  struct.AgentPail.html  struct.AgentPailConfig.html  struct.ConfigFile.html  struct.DefaultGuard.html  struct.Level.html  struct.ManagementPailConfig.html  struct.ProxyPail.html  struct.ProxyPailConfig.html  struct.RelayPail.html  struct.RelayPailConfig.html  struct.Sandbox.html  struct.SandboxConfig.html  struct.SandboxPailConfig.html  struct.ServerPail.html  struct.ServerPailConfig.html  type.JoinHandle.html  type.JoinSet.html  type.Pails.html
main/api/quilkin/: all.html  index.html  macro.__func_name.html  macro.include_proto.html  macro.temp_file.html  sidebar-items.js  struct.Cli.html  struct.Config.html  struct.Proxy.html  type.Result.html
main/api/quilkin_macros/: all.html  index.html  macro.include_proto.html
main/api/quilkin_proto/: all.html  index.html
main/api/quilkin_system/: all.html  fn.register_metrics.html  index.html  sidebar-items.js
main/api/quilkin_types/: all.html  enum.AddressKind.html  enum.IcaoError.html  index.html  struct.Endpoint.html  (+2 more)
main/book/: 404.html  faq.html  filters.html  index.html  installation.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-085db65c.js  searchindex-28e7a9cb.js  searchindex-58f59a45.js  searchindex-95329036.js  searchindex-e392a3ba.js  searchindex.js  searchindex.json  toc-66b8cac1.js  toc-740ee2a1.js  toc-e06e99c8.js  toc.html
src/: alloc.rs  cli.rs  collections.rs  components.rs  config.rs  filters.rs  metrics.rs  net.rs  providers.rs  service.rs  signal.rs  test.rs
src/alloc/: metrics.rs  tracking.rs
src/cli/: generate_config_schema.rs
src/codec/: qcmp.rs
src/components/: admin.rs
src/config/: datacenter.rs  icao.rs  watch.rs
src/filters/: chain.rs  decryptor.rs  factory.rs  metrics.rs  token_router.rs
src/metrics/: http.rs
src/net/: cluster.rs  http.rs  io.rs  maxmind_db.rs  packet.rs  phoenix.rs  servers.rs  sessions.rs
src/providers/: corrosion.rs  http.rs  k8s.rs
tests/: metrics.rs  provider_k8s.rs  qcmp.rs
(+4412 files in other folders)
