#
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[package]
name = "quilkin"
version.workspace = true
authors = [
    "Mark Mandel <markmandel@google.com>",
    "Ifeanyi Ubah <ifeanyi.ubah@embark-studios.com>",
    "Erin Power <erin.power@embark-studios.com>",
]
license.workspace = true
description = "Quilkin is a non-transparent UDP proxy specifically designed for use with large scale multiplayer dedicated game server deployments, to ensure security, access control, telemetry data, metrics and more."
homepage = "https://github.com/EmbarkStudios/quilkin"
repository = "https://github.com/EmbarkStudios/quilkin"
readme = "README.md"
keywords = [
    "proxy",
    "game-server",
    "game-development",
    "networking",
    "multiplayer",
]
categories = ["game-development", "network-programming"]
edition.workspace = true
exclude = ["docs", "build", "examples", "image"]

[profile.lto]
inherits = "release"
opt-level = 3
codegen-units = 1
lto = "fat"

[features]
default = ["jemalloc"]
instrument = []
mimalloc = ["dep:mimalloc"]
heap-stats = ["dep:crossbeam-utils"]
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl", "dep:jemalloc_pprof"]

[lints]
workspace = true

[dependencies]
# Local
quilkin-macros = { version = "0.10.0", path = "./crates/macros" }
quilkin-proto.workspace = true
quilkin-system.workspace = true
quilkin-types.workspace = true
quilkin-xds.workspace = true

# Crates.io
arc-swap.workspace = true
async-stream.workspace = true
async-trait.workspace = true
base64.workspace = true
base64-serde = "0.8.0"
bytes.workspace = true
cfg-if = "1.0"
chacha20 = { version = "0.10", default-features = false, features = ["cipher"] }
crossbeam-utils = { version = "0.8", optional = true }
clap = { version = "4.5.54", features = ["cargo", "derive", "env"] }
dashmap = { version = "6.1", features = ["serde"] }
either = "1.15.0"
eyre.workspace = true
fixedstr.workspace = true
futures.workspace = true
futures-util.workspace = true
http-body-util = "0.1"
hyper = { version = "1.8", features = ["http2", "http1", "server"] }
hyper-rustls = { version = "0.27", default-features = false, features = [
    "http2",
    "webpki-roots",
    "ring",
] }
ipnetwork = { version = "0.21.1", features = ["serde"] } # keep in sync with maxmind
k8s-openapi.workspace = true
maxminddb = "0.27.1"
notify = "8.2"
num_cpus = "1.17.0"
mimalloc = { version = "0.1.48", optional = true }
once_cell.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
prometheus-client.workspace = true
prost.workspace = true
prost-types.workspace = true
rand.workspace = true
regex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_regex = "1.1.0"
serde_yaml = "0.9.34"
socket2.workspace = true
stable-eyre = "0.2.2"
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
tryhard.workspace = true
typemap_rev = "0.3.0"
url.workspace = true
uuid.workspace = true
lasso = { version = "0.7.3", features = ["multi-threaded"] }
kube.workspace = true
kube-core.workspace = true
hickory-resolver = { version = "0.25.2", features = [
    "https-ring",
    "system-config",
] }
strum = "0.27"
strum_macros = "0.27"
libflate = "2.2.1"
form_urlencoded = "1.2.2"
enum_dispatch = "0.3.13"
gxhash = "3.5.0"
kube-leader-election = "0.42.0"
rustls = { version = "0.23", default-features = false }
tracing-appender.workspace = true
axum.workspace = true
hyper-util.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemalloc_pprof = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true, optional = true }
tikv-jemalloc-ctl = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", default-features = false }
libc.workspace = true
pprof = { version = "0.13.1", package = "pprof2" }
quilkin-xdp = { version = "0.1.0", path = "crates/xdp" }
slab = "0.4"
sys-info = "0.9.1"

[dev-dependencies]
once_cell.workspace = true
pretty_assertions = "1.4.1"
rand.workspace = true
regex.workspace = true
tracing-test = "0.2.5"
tempfile.workspace = true
axum-test = "18.6.0"

# We want debug information when doing benchmarks for debugging purposes as well
# as better (correct) callstacks in perf
[profile.bench]
debug = true

[workspace]
#"crates/nmap-service-probes",
members = [
    ".",
    "crates/agones",
    "crates/corrosion",
    "crates/corrosion-tests",
    "crates/macros",
    "crates/proto-gen",
    "crates/quilkin-proto",
    "crates/system",
    "crates/test",
    "crates/types",
    "crates/xdp",
    "crates/xds",
]

[workspace.package]
license = "Apache-2.0"
edition = "2024"
version = "0.10.0"

[workspace.dependencies]
arc-swap = { version = "1.8.0", features = ["serde"] }
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
bytes = { version = "1.11.1", features = ["serde"] }
compact_str = "0.7"
corrosion = { path = "crates/corrosion" }
eyre = "0.6.12"
fixedstr = { version = "0.5", features = ["flex-str"] }
futures = "0.3.31"
futures-util = "0.3.31"
hyper-util = { version = "0.1", features = ["client", "client-legacy"] }
jemalloc_pprof = { version = "0.8", features = ["symbolize"] }
kube = { version = "2.0", features = [
    "runtime",
    "rustls-tls",
    "client",
], default-features = false }
kube-core = { version = "2.0", default-features = false, features = [
    "schema",
] }
k8s-openapi = { version = "=0.26.0", features = ["v1_33", "schemars"] }
libc = "0.2"
once_cell = "1.21.3"
parking_lot = "0.12.5"
prometheus = { version = "0.14", default-features = false }
prometheus-client = { version = "0.24" }
prost = "0.14"
prost-types = "0.14"
quilkin = { path = "." }
quilkin-proto = { version = "0.10.0", path = "crates/quilkin-proto" }
quilkin-system = { version = "0.10.0", path = "crates/system" }
quilkin-types = { version = "0.10.0", path = "crates/types" }
quilkin-xds = { version = "0.10.0", path = "crates/xds" }
rand = "0.9"
regex = "1.12.2"
schemars = { version = "1.2", features = ["bytes1", "url2"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
socket2 = { version = "0.6", features = ["all"] }
tempfile = "3.24.0"
thiserror = "2.0.17"
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }
tikv-jemallocator = { version = "0.6", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
time = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "fs",
    "signal",
    "test-util",
    "parking_lot",
    "tracing",
] }
tokio-stream = { version = "0.1.18", features = ["net", "sync"] }
tokio-util = "0.7.18"
tonic = { version = "0.14", default-features = false, features = ["codegen", "router", "tls-ring", "transport"] }
tonic-prost = "0.14"
tower = "0.5"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-subscriber = "0.3"
tryhard = "0.5.2"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.19.0", default-features = false, features = ["v4"] }
xdp = "0.7.1"

# Corrosion libraries. The libraries that corrosion transitively depends on that
# we also need to depend on should be kept in line with the versions used by corrosion
camino = "1.2"
corro-agent = { git = "https://github.com/EmbarkStudios/corrosion", branch = "misc" }
corro-api-types = { git = "https://github.com/EmbarkStudios/corrosion", branch = "misc" }
corro-client = { git = "https://github.com/EmbarkStudios/corrosion", branch = "misc" }
corro-types = { git = "https://github.com/EmbarkStudios/corrosion", branch = "misc" }
rusqlite = "=0.33"
spawn = { git = "https://github.com/EmbarkStudios/corrosion", branch = "misc" }
sqlite-pool = { git = "https://github.com/EmbarkStudios/corrosion", branch = "misc" }
tripwire = { git = "https://github.com/EmbarkStudios/corrosion", branch = "misc" }
uhlc = "0.7"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"
