[package]
name = "corrosion"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
camino.workspace = true
compact_str.workspace = true
data-encoding = "2.9"
eyre.workspace = true
futures.workspace = true
indexmap = "2.11"
parking_lot.workspace = true
quilkin-types.workspace = true
quinn = "0.11"
quinn-plaintext = "0.3"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec = "1.15"
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uhlc.workspace = true
uuid.workspace = true

corro-agent.workspace = true
corro-api-types.workspace = true
corro-client.workspace = true
corro-types.workspace = true
spawn.workspace = true
sqlite-pool.workspace = true
tripwire.workspace = true

