[package]
name = "quilkin-types"
description = "Shared types for the quilkin ecosystem"
version.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
compact_str.workspace = true
data-encoding = "2.10"
schemars.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
